WhitespaceDx/force-app/main/default/objects/AlexCustomObject__c/fields/AnEmail__c.field-meta.xml
<CustomField>
<fullName>AnEmail__c</fullName>
<label>AnEmail</label>
<type>Email</type>
</CustomField>