WhitespaceDx/force-app/main/default/objects/AlexCustomObject__c/listViews/All.listView-meta.xml
<ListView>
<fullName>All</fullName>
<filterScope>Everything</filterScope>
<label>All</label>
</ListView>